Fixed range collapsing issue on FireFox

--- a/app/oscitk/themes/Red/styles/_navbar-slider.scss
+++ b/app/oscitk/themes/Red/styles/_navbar-slider.scss
@@ -1,4 +1,7 @@
-$slider-track-width: 300px;
+
+// ALSO SEE #osci-page-slider in _navbar.css
+
+$slider-track-width: 100%;
 $slider-track-height: 2px;
 
 $slider-track-background: $color-light-grey;
